# FluxaiCapital

./: .env.example  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  CLAUDE.md  ENV_SETUP_GUIDE.md  MCP_TASK_MASTER_GUIDE.md  PRD.md  PROJECT_INFO.md  README.md  TASKS_WITH_SUBTASKS.md  TASK_BREAKDOWN.md  dev.sh  docker-compose.yml  eslint.config.js  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  test-api-chunked.js  test-api-endpoints.js  test-features.sh  test-login.js  test-report.md  tsconfig.json
.claude/: claude_desktop_config.json  session_context.md  settings.local.json
.husky/: commit-msg
.taskmaster/: README.md  config.json  state.json
.taskmaster/tasks/: tasks.json  tasks_backup.json  tasks_detailed.json  tasks_phase2-4.json
backend/src/: main.py
config/: CLAUDE_DESKTOP_CONFIG.json  tasks.json
docs/: COMPLETE_PROJECT_PHASES.md  COMPLETE_TASKS_WITH_SUBTASKS.md  ENHANCED_TASK_ANALYSIS.md  PLANNING.md  POSTGRESQL_SETUP.md  RECOMMENDED_MCP_SERVERS.md  SESSION_CONTEXT_2025-08-10.md  WEBSOCKET_SETUP.md
frontend/: .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
prisma/: dev.db  schema.prisma  seed.ts
prisma/prisma/: dev.db
scripts/: cleanup.sh  install-mcp-servers.sh  migrate-to-postgres.js  seed.js  test-api.js
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: README.md
src/config/: chart-theme.ts  constants.ts  i18n.ts
src/hooks/: useApi.ts  useCSRF.ts  (+11 more)
(+231 files in other folders)
